--- a/_config.yml
+++ b/_config.yml
@@ -96,9 +96,9 @@ feed_show_tags: true
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#EAEAEA"
-navbar-text-col: "#404040"
-navbar-border-col: "#DDDDDD"
+navbar-col: "#111111"
+navbar-text-col: "#FFFFFF"
+navbar-border-col: "#111111"
 page-col: "#FFFFFF"
 text-col: "#404040"
 link-col: "#008AFF"
