--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,6 @@ navbar-links:
   Resources:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
-
 # --- Logo --- #
 
 # Image to show in the navigation bar - works best with a square image
@@ -40,6 +38,7 @@ title-img: /assets/img/bw_schmall.png
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
   email: "demz@zhaw.ch"
+  linkedin: umutdemiriz
 #  facebook: deanattali
 #  github: daattali
 #  twitter: daattali
@@ -47,7 +46,6 @@ social-network-links:
 #  youtube: c/daattali
 #  medium: yourname
 #  reddit: yourname
-#  linkedin: daattali
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
