--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,8 @@ author: Umut Demiriz
 navbar-links:
   About Me: "aboutme"
   Results: "results"
-  Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
+  Links:
+    - ZHAW Profile: "https://www.zhaw.ch/en/about-us/person/demz/"
 # --- Logo --- #
 
 # Image to show in the navigation bar - works best with a square image
